Fixing photos css bug on mobile

--- a/includes/style.css
+++ b/includes/style.css
@@ -662,6 +662,10 @@ ul.contenthead {
 		width: 90% !important;
 	}
 	
+	.leftphotobutton {
+		left: -8% !important;
+	}
+	
 	.printbutton {
 		margin-bottom: 3px;
 	}
